    hadoop.security.group.mapping.ldap.search.filter.user. (Jonathan Natkins
    via atm)

    HADOOP-8480. The native build should honor -DskipTests.
    (Colin Patrick McCabe via eli)

    HADOOP-8659. Native libraries must build with soft-float ABI for Oracle JVM
    on ARM. (Trevor Robinson via todd)

    HADOOP-8654. TextInputFormat delimiter bug (Gelesh and Jason Lowe via
    bobby)

  BREAKDOWN OF HDFS-3042 SUBTASKS

    HADOOP-8220. ZKFailoverController doesn't handle failure to become active
    correctly (todd)

    HADOOP-8228. Auto HA: Refactor tests and add stress tests. (todd)
    
    HADOOP-8215. Security support for ZK Failover controller (todd)
    
    HADOOP-8245. Fix flakiness in TestZKFailoverController (todd)
    
    HADOOP-8257. TestZKFailoverControllerStress occasionally fails with Mockito
    error (todd)
    
    HADOOP-8260. Replace ClientBaseWithFixes with our own modified copy of the
    class (todd)
    
    HADOOP-8246. Auto-HA: automatically scope znode by nameservice ID (todd)
    
    HADOOP-8247. Add a config to enable auto-HA, which disables manual
    FailoverController (todd)
    
    HADOOP-8306. ZKFC: improve error message when ZK is not running. (todd)
    
    HADOOP-8279. Allow manual failover to be invoked when auto-failover is
    enabled. (todd)
    
    HADOOP-8276. Auto-HA: add config for java options to pass to zkfc daemon
    (todd via eli)
    
    HADOOP-8405. ZKFC tests leak ZK instances. (todd)

    HADOOP-8660. TestPseudoAuthenticator failing with NPE. (tucu)

    HADOOP-7703. Improved excpetion handling of shutting down web server.
    (Devaraj K via Eric Yang)

    HADOOP-8699. some common testcases create core-site.xml in test-classes 
    making other testcases to fail. (tucu)

Release 2.0.0-alpha - 05-23-2012

  INCOMPATIBLE CHANGES

    HADOOP-7920. Remove Avro Rpc. (suresh)

  NEW FEATURES

    HADOOP-7773. Add support for protocol buffer based RPC engine.
    (suresh)
